# iit-repair-ros-pkg

./: CMakeLists.txt  README.md
repair_cartesio/: CMakeLists.txt
repair_cartesio/config/: repair_simple.yaml
repair_cartesio/launch/: repair.launch
repair_cartesio/rviz/: repair_cartesio.rviz
repair_cntrl/: CMakeLists.txt  package.xml
repair_cntrl/config/: repair_basic.yaml  rt_traj_replayer.yaml  traj_track.yaml
repair_cntrl/src/repair_utils/: generate_sim_plots.py  opt_sol_mat2txt_converter.py  post_process_utils.py
repair_cntrl/src/xbot2_plugins/: replay_now.py  start_replay_plugin.py
repair_cntrl/src/xbot2_plugins/replay_traj/: CMakeLists.txt
repair_cntrl/src/xbot2_plugins/replay_traj/include/: traj_replayer.h
repair_cntrl/src/xbot2_plugins/replay_traj/src/: plugin_utils.cpp  plugin_utils.hpp  traj_replayer_rt.cpp
repair_cntrl/srv/: ReplayNow.srv
repair_codesign/: CMakeLists.txt  package.xml
repair_codesign/config/: codes_cost_rel_weights.yaml
repair_codesign/src/: bartender_cartesio_emulator.py  bartender_int_marker.py  first_level_sols_plots.py  flipping_task.py  flipping_test.py  gen_cl_man_ref.py  horizon_codesign_test.py  marker_playground.py  marker_test.py  posprocess_sols.py  postprocess_first_level_sols.py  postprocess_second_level_sols.py  postprocess_sols.py  replay_sol.py  run_1st_step_opt_on_workstation.py  run_2nd_3rd_step_opt_on_workstation.py  run_codesign_pìpeline.py  run_first_level_opt_on_workstation.py  run_second_level_opt_on_workstation.py  run_sensitivity_analysis_opt_on_workstation.py  second_level_sols_plots.py  test_codesign_opt.py  test_stuff.py
repair_codesign/src/codesign_pyutils/: clustering_utils.py  defaults_vals.py  dump_utils.py  horizon_utils.py  load_utils.py  math_utils.py  misc_definitions.py  miscell_utils.py  plot_utils.py  post_proc_utils.py  ros_utils.py  solution_utils.py  task_utils.py  tasks.py
repair_codesign/src/horizon/: test.py
repair_codesign/test_results/replay_directory/: second_level_info_t07-09-2022-16_52_10.mat
repair_codesign/test_results/replay_directory/opt/: TrajReplayerRt__0_2022_09_10__17_43_02.mat  final_opt_solution_07-09-2022-16_52_10.mat  prova.mat
repair_codesigntest_results/test_results_01-08-2022-19_17_36/: additional_info_p0_t01-08-2022-19_17_36.mat
repair_gazebo/: CMakeLists.txt  package.xml
repair_gazebo/launch/: repair_gazebo.launch
repair_mujoco/: CMakeLists.txt  package.xml
repair_srdf/: CMakeLists.txt  package.xml
repair_srdf/srdf/: repair.srdf  (+5 more)
repair_test/: cartesio_stress_test.py  stress_test.py
repair_urdf/: CMakeLists.txt  package.xml
repair_xbot/: CMakeLists.txt  package.xml
repair_xbot2/: repair_basic.yaml
(+61 files in other folders)
