<?xml version="1.0"?>

<package format="2">

  <name>repair_codesign</name>

  <version>0.0.1</version>

  <description> Ros package for co-design stuff concerning RePAIR project </description>

  <maintainer email="andrea@todo.todo">andrea</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
  
</package>
